# polystore

./: .env.e2e.fast  .env.e2e.heavy  .env.testnet.public  .gitignore  AGENTS.md  AGENTS_MAINNET_PARITY.md  AGENTS_TRUSTED_DEVNET_SOFT_LAUNCH_TODO.md  DEVNET_MULTI_PROVIDER.md  DOCS.md  ECONOMY.md  HAPPY_PATH.md  MAINNET_ECON_PARITY_CHECKLIST.md  MAINNET_GAP_TRACKER.md  MAINNET_PARITY_ISSUES.md  MIKE.md  README.md  SCOPE_STRIPEREPLICA.md  WEBSITE_UPGRADE_PLAN.md  assets_for_prompt.md  commit_fix.sh  commit_fix_build.sh  commit_fix_e2e.sh  commit_fix_gateway.sh  commit_root_fix.sh  commit_sprint_complete.sh  commit_sprint_start.sh  commit_stack_update.sh  commit_ui_polish.sh  commit_yolo_fixes.sh  e2e_burn.sh  e2e_create_deal_from_evm.sh  e2e_elasticity.sh  e2e_flow.sh  e2e_gateway_retrieval.sh  e2e_gateway_spring.sh  e2e_open_retrieval_session_cli.sh  e2e_open_retrieval_session_mode2_cli.sh  e2e_retrieval.sh  e2e_retrieval_fees.sh  e2e_slashing.sh  (+22 more)
docs/: AGENTS_AUTONOMOUS_RUNBOOK.md  AGENTS_RUNBOOK_REPO_ANCHORED.md  AGENT_PROMPT_AUTONOMOUS.md  ALPHA_PROVIDER_QUICKSTART.md  ALPHA_STORAGE_USER_QUICKSTART.md  GAP_REPORT_REPO_ANCHORED.md  NILCHAIND_REDEPLOY_RUNBOOK.md  POLYSTORECHAIND_REDEPLOY_RUNBOOK.md  REMOTE_SP_JOIN_QUICKSTART.md  TESTNET_READINESS_REPORT.md  TRUSTED_DEVNET_COLLABORATOR_PACKET.md  TRUSTED_DEVNET_COLLABORATOR_PACKET_NILSTORE_ORG.md  TRUSTED_DEVNET_COLLABORATOR_PACKET_POLYNOMIALSTORE_COM.md  TRUSTED_DEVNET_MONITORING_CHECKLIST.md  TRUSTED_DEVNET_SOFT_LAUNCH.md  branding-transition.md  manual-devnet-runbook.md  runtime-personas.md
nil-website/: AGENTS.md  DESIGN_VISION.md  README.md  index.html  output.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  website-spec.md  wrangler.jsonc
nil_cli/: Cargo.toml
nil_cli/src/: main.rs
nil_core/: Cargo.toml
nil_core/fixtures/parity/: README.md
nil_core/src/: builder.rs  coding.rs  ffi.rs  kzg.rs  layout.rs  lib.rs  utils.rs  wasm.rs
nil_core/tests/: coding_expand_test.rs  expand_parity_test.rs  kzg_endianness_test.rs  mode2_artifacts_v1_fixture_test.rs  repro_issue.rs  wasm_expand_hashes.js  wasm_web_expand_hashes.mjs
nil_faucet/: go.mod  main.go
nil_gateway/: .gitignore  TAURI_APP_SPEC.md  aggregate.go  deal_generation_inspect.go  deal_generation_status.go  deal_generation_status_test.go  deal_state.go  deal_validation_cache.go  debug_raw_fetch.go  debug_raw_fetch_test.go  download_session.go  e2e_comprehensive.sh  epoch_test.go  fetch_cache.go  fetch_session.go  fetch_session_db_test.go  fetch_session_onchain.go  fetch_session_onchain_test.go  fetch_test.go  file_path.go  gateway-provider-split.md  gateway_auth.go  gateway_forward.go  gateway_update_cas_test.go  go.mod  go.sum  ingest.go  ingest_append.go  ingest_fast.go  ingest_mode2.go  ingest_mode2_config_test.go  ingest_mode2_finalize_test.go  ingest_mode2_sparse_test.go  list_files_test.go  main.go  main_test.go  manifest_root.go  manifest_root_test.go  mdu_viewer.go  mdu_viewer_test.go  (+44 more)
nil_gateway_gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
nil_p2p/: Cargo.toml
nil_p2p/src/: lib.rs  main.rs
polystore_mock_l1/: Cargo.toml
polystore_mock_l1/src/: main.rs
(+1661 files in other folders)
