[package]
name = "nil_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake2 = "0.10.6"
clap = { version = "4.5.53", features = ["derive", "env"] }
hex = "0.4.3"
nil_core = { version = "0.1.0", path = "../nil_core" }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rs_merkle = { version = "1.5.0", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
