[package]
name = "nil_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
debug-print = []

[dependencies]
bls12_381 = { version = "0.8", features = ["pairings"] }
reed-solomon-erasure = "6.0"
hex = "0.4.3"
libc = "0.2"
ff = "0.13"
group = "0.13"
pairing = "0.23"
sha2 = "0.10.9"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
thiserror = "2.0.17"
blake2 = "0.10.6"
rs_merkle = "1.5.0"
wasm-bindgen = "0.2"
rand = "0.9.2"
getrandom = { version = "0.3.0", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blst = "0.3"
